feat(kost): early create feature
