# docs/openapi.yaml
@@ -131,7 +131,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /landlord/dashboard/{userId}:
+  /landlord/dashboard:
     get:
       summary: Get all data in landlord dashboard
       tags: [ Landlord ]
@@ -139,7 +139,7 @@ paths:
         - BearerAuth: []
       parameters:
         - name: userId
-          in: path
+          in: header
           required: true
           description: ID landlord
           schema:
@@ -215,7 +215,7 @@ paths:
         404:
           description: User not found
 
-  /landlord/dashboard/kost/:
+  /landlord/dashboard/kost:
     post:
       summary: Create new kost for landlord
       tags: [ Landlord ]
@@ -261,6 +261,9 @@ paths:
                     type: string
                     enum: [WIFI, AC, ENSUITE_BATHROOM, SHARED_BATHROOM]
                   example: [WIFI, AC]
+                totalRooms:
+                  type: integer
+                  example: 10
       responses:
         201:
           description: Create kost success
@@ -355,7 +358,7 @@ paths:
         401:
           description: Unauthorized
 
-  /landlord/dashboard/kost/files/{userId}/{kostId}:
+  /landlord/dashboard/kost/files/{kostId}:
     post:
       summary: Upload images for kost
       tags: [ Landlord ]
@@ -370,7 +373,7 @@ paths:
             type: string
             format: uuid
         - name: userId
-          in: path
+          in: header
           required: true
           description: ID landlord
           schema:
